--- a/views/login.hbs
+++ b/views/login.hbs
@@ -10,6 +10,9 @@
 			<div class="card card-signin my-5">
 				<div class="card-body">
 					<h5 class="card-title text-center">Sign In</h5>
+					{{#if errors}}
+						<h1>{{errors}}</h1>
+					{{/if}}
 					<form class="form-signin" method="POST" action="/users/login">
 						<div class="form-label-group">
 							<input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
