--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,4 +1,4 @@
-<!-- <link rel="stylesheet" href="/stylesheets/login.css"> -->
+<link rel="stylesheet" href="/stylesheets/login.css">
 <div class="container">
 	<div class="row">
 		<div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
@@ -8,11 +8,11 @@
 					<!-- <h1>{{errors}}</h1> -->
 					<form class="form-signin" method="POST" action="/users/register">
 						<div class="form-label-group">
-							<input type="text" id="username" class="form-control" placeholder="username" required autofocus>
+							<input type="text" name="username" id="username" class="form-control" placeholder="username" required autofocus>
 							<label for="username">username</label>
 						</div>
 						<div class="form-label-group">
-							<input type="email" id="email" class="form-control" placeholder="email" required autofocus>
+							<input type="email" name="email" id="email" class="form-control" placeholder="email" required autofocus>
 							<label for="email">email</label>
 						</div>
 						<div class="form-label-group">
