--- a/views/login.hbs
+++ b/views/login.hbs
@@ -5,21 +5,26 @@
 <link rel="stylesheet" href="/stylesheets/bootstrap-social.css">
 
 <div class="container">
+	<!-- {{#if errors}} -->
+	<!-- {{/if}} -->
 	<div class="row">
 		<div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+			{{#if messages}}
+				<div>
+					<strong>FLASH!</strong> {{msg}}
+				</div>
+			{{/if}}
 			<div class="card card-signin my-5">
 				<div class="card-body">
 					<h5 class="card-title text-center">Sign In</h5>
-					{{#if errors}}
-						<h1>{{errors}}</h1>
-					{{/if}}
 					<form class="form-signin" method="POST" action="/users/login">
+						<h1>{{errors}}</h1>
 						<div class="form-label-group">
-							<input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-							<label for="inputEmail">Email address</label>
+							<input name="username" type="text" id="username" class="form-control" placeholder="username">
+							<label for="username">username</label>
 						</div>
 						<div class="form-label-group">
-							<input name="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+							<input name="password" type="password" id="inputPassword" class="form-control" placeholder="Password">
 							<label for="inputPassword">Password</label>
 						</div>
 
