--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -7,6 +7,14 @@ body {
     background: black;
 }
 
+body i {
+    font-family: 'FontAwesome' !important;
+}
+
+a {
+    text-decoration: none;
+}
+
 * {
     font-family: Consolas;
 }
