--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,1 +1,90 @@
-<h1>HELL</h1>
+<!-- Font Awesome -->
+<link rel='stylesheet prefetch' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
+<link rel="stylesheet" href="/stylesheets/home.css">
+<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+	<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
+	<a class="navbar-brand" href="#"><img src="/images/logo.png" width="30" height="30" class="d-inline-block align-top" alt=""></a>
+	<div class="collapse navbar-collapse" id="navbarNav">
+		<ul class="navbar-nav">
+			<li class="nav-item active">
+				<a class="nav-link" href="#">home<span class="sr-only">(current)</span></a>
+			</li>
+		</ul>
+		<ul class="navbar-nav">
+			<li class="nav-item active">
+				<a class="nav-link" href="/sea">home<span class="sr-only">(current)</span></a>
+			</li>
+		</ul>
+	</div>
+</nav>
+<div class="container">
+	<form method="GET">
+		<div class="row">
+			<div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+				<div class="input-group">
+					<input type="text" class="form-control" placeholder="Search" id="txtSearch" />
+					<div class="input-group-btn">
+						<button class="btn btn-primary" type="submit">
+							<i class="fab fa-search"></i>
+						</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</form>
+</div>
+
+<div class="containers">
+	{{#each img}}
+		<div class="movie-card">
+			<div class="movie-header" style="background-image: url('{{this.pic2}}')">
+				<div class="header-icon-container">
+					<a href="#">
+						<i class="material-icons header-icon"><span class="fas fa-play"></span></i>
+					</a>
+				</div>
+			</div>
+			<!--movie-header-->
+			<div class="movie-content">
+				<div class="movie-content-header">
+					<a href="#">
+						<h3 class="movie-title">{{this.title}}</h3>
+					</a>
+					<div class="imax-logo"></div>
+				</div>
+				<div class="movie-info">
+					<div class="info-section">
+						<label>release date</label>
+						<span>{{this.year}}</span>
+					</div>
+					<!--date,time-->
+					<div class="info-section">
+						<label>rating</label>
+						<span>{{this.rate}}</span>
+					</div>
+					<!--screen-->
+					<div class="info-section">
+						<label>Row</label>
+						<span>F</span>
+					</div>
+					<!--row-->
+					<div class="info-section">
+						<label>Seat</label>
+						<span>21,22</span>
+					</div>
+					<!--seat-->
+				</div>
+			</div>
+			<!--movie-content-->
+		</div>
+		<!--movie-card-->
+	{{/each}}
+
+</div>
+<!--container-->
+
+<script>
+	console.log();
+</script>
