--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,6 +15,9 @@
 			<li class="nav-item active">
 				<a class="nav-link" href="/register">sign up</a>
 			</li>
+			<li class="nav-item active">
+				<a class="nav-link" href="/video">video</a>
+			</li>
 		</ul>
 	</div>
 </nav>
