--- a/public/stylesheets/video.css
+++ b/public/stylesheets/video.css
@@ -3,19 +3,22 @@ body {
 }
 
 #videoPlayer {
-	width :"600";
-	height :"400";
+	width : 900px;
+	height : 600px;
 	align-content: center;
+	text-align: center;
+	border: 5px solid #FF9900;
 }
 
 .player {
 	position: absolute;
+	height: 73%;
     top:0;
     bottom: 0;
     left: 0;
     right: 0;
-	text-align: center;
-    margin: auto;
+	/* text-align: center; */
+	margin: auto;
 }
 
 /* .divider-text {
