--- a/views/video.hbs
+++ b/views/video.hbs
@@ -1,20 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <link rel="stylesheet" href="/stylesheets/video.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-
-<body>
-    <div class='player'>
-    <video id="videoPlayer" width="600" height="400" controls>
-        <source src="http://localhost:8080/video" type="video/mp4">
-    </video>
-    </div>
-</body>
-
-</html>
+<link rel="stylesheet" href="/stylesheets/video.css">
+<!-- Font Awesome -->
+<link rel='stylesheet prefetch' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
+<link rel="stylesheet" href="/stylesheets/home.css">
+<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+	<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
+	<a class="navbar-brand" href="#"><img src="/images/logo.png" width="30" height="30" class="d-inline-block align-top" alt=""></a>
+	<div class="collapse navbar-collapse" id="navbarNav">
+		<ul class="navbar-nav">
+			<li class="nav-item active">
+				<a class="nav-link" href="#">home<span class="sr-only">(current)</span></a>
+			</li>
+		</ul>
+		<ul class="navbar-nav">
+			<li class="nav-item active">
+				<a class="nav-link" href="/sea">home<span class="sr-only">(current)</span></a>
+			</li>
+		</ul>
+	</div>
+</nav>
+<div class='player'>
+	<center>
+		<video src="http://localhost:8080/video" type="video/mp4" id="videoPlayer" controls></video>
+	</center>
+</div>
