--- a/views/video.hbs
+++ b/views/video.hbs
@@ -22,6 +22,6 @@
 </nav>
 <div class='player'>
 	<center>
-		<video src="http://localhost:8080/video" type="video/mp4" id="videoPlayer" controls></video>
+		<video style="width:200px;height:200px" src="http://localhost:8080/" type="video/mp4" id="videoPlayer" controls></video>
 	</center>
 </div>
