--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -2,6 +2,51 @@ body {
     background-color: black;
 }
 
+/* .div-info {
+    background-color: springgreen;
+    width: 70%;
+    height: 50vw;
+    margin: 0 auto;
+} */
+.movie-desc {
+    width: 0;
+    height: 0;
+    /* width: 70vw; */
+    /* height: 800px; */
+    background: #FFAB2E;
+    /* background: linear-gradient(to bottom left, rgba(255, 255, 255, .8), #FFAB2E); */
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    border-radius: 10px;
+}
+
+.cancel {
+    /* position: absolute; */
+    float: right;
+    margin-right: 1vw;
+    margin-top: 1vw;
+    width: 4vw;
+    height: 4vw;
+    /* background-color: tomato; */
+}
+
+.cancel:hover {
+    transform: scale(1.2);
+}
+
+.box {
+    border-radius: 10px;
+    width: 100%;
+    height: 75%;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    clip-path: polygon(-34% 0%, 101% 0%, 100% 90%);
+}
+
 body i {
     font-family: 'FontAwesome' !important;
 }
@@ -10,6 +55,10 @@ body i {
     color: gold;
     font-weight: bold;
     background-color: #FF9900;
+}
+
+.containers {
+    position: relative;
 }
 
 .collapse {
@@ -57,7 +106,7 @@ a:hover {
     color: #6ABCEA;
 }
 
-.containers {
+.gala {
     /* background-color: yellow; */
     display: -webkit-box;
     display: -ms-flexbox;
