--- a/views/home.hbs
+++ b/views/home.hbs
@@ -40,7 +40,6 @@
 
 <div class="containers">
 	<div class="gala">
-
 	</div>
 </div>
 <div class="movie-desc">
@@ -49,12 +48,17 @@
 			<img style="width:100%;height:100%" src="/images/cancel.svg" id="cancel">
 		</div>
 	</div>
-	<p>ddfdf</p>
-
+	<p></p>
 </div>
 
-
-
+<div class='player'>
+	<center>
+		<video id="videoPlayer" controls>
+			<source src="http://localhost:8080/video" type="video/mp4">
+  			Your browser does not support the video tag.
+		</video>
+	</center>
+</div>
 </script>
 <!--container-->
 
