--- a/views/home.hbs
+++ b/views/home.hbs
@@ -7,7 +7,7 @@
 	<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	</button>
-	<a class="navbar-brand" href="#"><img src="/images/logo.png" width="30" height="30" class="d-inline-block align-top" alt=""></a>
+	<a class="navbar-brand" href="/home"><img src="/images/logo.png" width="30" height="30" class="d-inline-block align-top" alt=""></a>
 	<div class="collapse navbar-collapse" id="navbarNav">
 		<ul class="navbar-nav">
 			<li class="nav-item active">
@@ -16,7 +16,7 @@
 		</ul>
 		<ul class="navbar-nav">
 			<li class="nav-item active">
-				<a class="nav-link" href="/sea">home<span class="sr-only">(current)</span></a>
+				<a class="nav-link" href="/video">video<span class="sr-only">(current)</span></a>
 			</li>
 		</ul>
 	</div>
@@ -51,14 +51,7 @@
 	<p></p>
 </div>
 
-<div class='player'>
-	<center>
-		<video id="videoPlayer" controls>
-			<source src="http://localhost:8080/video" type="video/mp4">
-  			Your browser does not support the video tag.
-		</video>
-	</center>
-</div>
+
 </script>
 <!--container-->
 
