--- a/views/video.hbs
+++ b/views/video.hbs
@@ -10,18 +10,16 @@
 	<div class="collapse navbar-collapse" id="navbarNav">
 		<ul class="navbar-nav">
 			<li class="nav-item active">
-				<a class="nav-link" href="#">home<span class="sr-only">(current)</span></a>
-			</li>
-		</ul>
-		<ul class="navbar-nav">
-			<li class="nav-item active">
-				<a class="nav-link" href="/sea">home<span class="sr-only">(current)</span></a>
+				<a class="nav-link" href="/home">home<span class="sr-only">(current)</span></a>
 			</li>
 		</ul>
 	</div>
 </nav>
 <div class='player'>
 	<center>
-		<video style="width:200px;height:200px" src="http://localhost:8080/" type="video/mp4" id="videoPlayer" controls></video>
+		<video id="videoPlayer" controls>
+			<source src="http://localhost:8080/video" type="video/mp4">
+  			Your browser does not support the video tag.
+		</video>
 	</center>
 </div>
