--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -2,6 +2,10 @@ body {
     background-color: black;
 }
 
+.dslc-content i.fa {
+    font-style: normal;
+}
+
 /* .div-info {
     background-color: springgreen;
     width: 70%;
@@ -9,19 +13,21 @@ body {
     margin: 0 auto;
 } */
 .movie-desc {
+    -webkit-transition: 600ms;
+    transition: 600ms;
     width: 0;
     height: 0;
-    /* width: 70vw; */
-    /* height: 800px; */
+    /* width: 70vw;
+    height: 800px; */
     background: #FFAB2E;
     /* background: linear-gradient(to bottom left, rgba(255, 255, 255, .8), #FFAB2E); */
     position: fixed;
-    top: 0;
+    top: 200px;
     right: 0;
-    bottom: 0;
     left: 0;
     margin: auto;
     border-radius: 10px;
+    display: none;
 }
 
 .cancel {
@@ -41,10 +47,16 @@ body {
 .box {
     border-radius: 10px;
     width: 100%;
-    height: 75%;
+    height: 65%;
     background-size: 100%;
     background-repeat: no-repeat;
     clip-path: polygon(-34% 0%, 101% 0%, 100% 90%);
+    /* filter: blur(8px);
+    -webkit-filter: blur(8px); */
+}
+
+.box:hover {
+    clip-path: polygon(-100000px 0%, 101% 0%, 100% 90%);
 }
 
 body i {
@@ -235,6 +247,10 @@ a:hover {
 }
 
 @media screen and (max-width: 500px) {
+    .movie-desc {
+        width: 100%;
+    }
+
     .movie-card {
         width: 95%;
         max-width: 95%;
