--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="/stylesheets/style.css">
+<title>HyperTube</title>
 <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
 	<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
