--- a/views/login.hbs
+++ b/views/login.hbs
@@ -59,6 +59,7 @@
 							</button>
 						</a>
 						<hr class="my-4">
+						<p class="text-center"><a href="/forgotpassword">forgot password</a></p>
 						<p class="text-center">have an account? <a href="/register">sign up</a> </p>
 					</form>
 				</div>
