--- a/views/home.hbs
+++ b/views/home.hbs
@@ -19,6 +19,11 @@
 				<a class="nav-link" href="/video">video<span class="sr-only">(current)</span></a>
 			</li>
 		</ul>
+		<ul class="navbar-nav">
+			<li class="nav-item active">
+				<a class="nav-link" href="/logout">logout<span class="sr-only">(current)</span></a>
+			</li>
+		</ul>
 	</div>
 </nav>
 <div class="container">
@@ -52,9 +57,6 @@
 </div>
 
 
-</script>
-<!--container-->
-
 <script>
 	function makeMovieCall() {
 		var data = {};
@@ -83,7 +85,6 @@
 			contentType: 'application/json',
 			url: '/movie/info',
 			success: function(res) {
-				console.log(res);
 				$('.box').css({
 					'background-image': 'url("https://image.tmdb.org/t/p/w500' + res.backdrop_path + '")'
 				})
