--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -156,11 +156,11 @@ a:hover {
 }
 
 #videoPlayer {
-	width : 900px;
-	height : 600px;
+	width : 100%;
+	height : 770px;
 	align-content: center;
 	text-align: center;
-	border: 5px solid #FF9900;
+	border: 1px solid #FF9900;
 }
 
 .header-icon {
