--- a/views/home.hbs
+++ b/views/home.hbs
@@ -51,6 +51,14 @@
 	<p></p>
 </div>
 
+<div class='player'>
+	<center>
+		<video id="videoPlayer" controls autoplay>
+			<source src="http://localhost:8080/video" type="video/mp4" >
+  			Your browser does not support the video tag.
+		</video>
+	</center>
+</div>
 
 </script>
 <!--container-->
