--- a/views/video.hbs
+++ b/views/video.hbs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/stylesheets/video.css">
+{{!-- <link rel="stylesheet" href="/stylesheets/video.css"> --}}
 <!-- Font Awesome -->
 <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
 <link rel="stylesheet" href="/stylesheets/home.css">
@@ -17,8 +17,8 @@
 </nav>
 <div class='player'>
 	<center>
-		<video id="videoPlayer" controls>
-			<source src="http://localhost:8080/video" type="video/mp4">
+		<video id="videoPlayer" controls autoplay>
+			<source src="http://localhost:8080/video" type="video/mp4" >
   			Your browser does not support the video tag.
 		</video>
 	</center>
