--- a/views/home.hbs
+++ b/views/home.hbs
@@ -42,7 +42,6 @@
 		</div>
 	</form>
 </div>
-
 <div class="containers">
 	<div class="gala">
 	</div>
@@ -55,16 +54,14 @@
 	</div>
 	<p></p>
 </div>
-
 <div class='player'>
 	<center>
-		<video id="videoPlayer" controls autoplay>
-			<source src="http://localhost:8080/video" type="video/mp4" >
+		<video id="videoPlayer" controls>
+			<source src="http://localhost:8080/video" type="video/mp4">
   			Your browser does not support the video tag.
 		</video>
 	</center>
 </div>
-
 <script>
 	function makeMovieCall() {
 		var data = {};
@@ -79,7 +76,6 @@
 			}
 		});
 	}
-
 	function func(e) {
 		var year = $(e).find($('.year')).html(),
 			title = $(e).find($('.movie-title')).html();
@@ -105,13 +101,10 @@
 				});
 			}
 		});
-
 		// console.log(data);
 	}
-
 	$('document').ready(function() {
 		makeMovieCall();
-
 		$('#cancel').on('click', function() {
 			$('.movie-desc').css({
 				'display': 'none',
@@ -121,7 +114,6 @@
 				'height': '0'
 			});
 		})
-
 		document.getElementById("search").addEventListener("input", function() {
 			if ($('#search').val() === '') {
 				makeMovieCall();
