gar has started

--- a/views/profile_update.hbs
+++ b/views/profile_update.hbs
@@ -118,6 +118,8 @@
 				if ($(this).val() == 'password') {
 					$('#' + $(this).val() + '1').attr('disabled', true);
 					$('#' + $(this).val() + '2').attr('disabled', true);
+					// $('#' + $(this).val() + '1').val('');
+					// $('#' + $(this).val() + '2').val('');
 				} else {
 					$('#' + $(this).val()).attr('disabled', true);
 					// $('#' + $(this).val()).val(arr[$(this).val()]);
