--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -72,6 +72,7 @@ body i {
 
 .containers {
     position: relative;
+    z-index: 0;
 }
 
 .collapse {
@@ -120,7 +121,6 @@ a:hover {
 }
 
 .gala {
-    /* background-color: yellow; */
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -132,6 +132,7 @@ a:hover {
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
+    padding-top: 100px;
 }
 
 .movie-card {
@@ -167,11 +168,11 @@ a:hover {
 }
 
 #videoPlayer {
-	width : 900px;
-	height : 600px;
-	align-content: center;
-	text-align: center;
-	border: 5px solid #FF9900;
+    width: 900px;
+    height: 600px;
+    align-content: center;
+    text-align: center;
+    border: 5px solid #FF9900;
 }
 
 .header-icon {
