--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,44 +3,46 @@
 <script src="https://twitter.github.io/typeahead.js/js/handlebars.js"></script>
 <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
 <link rel="stylesheet" href="/stylesheets/home.css">
-<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-	<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-	</button>
-	<a class="navbar-brand" href="/home"><img src="/images/logo.png" width="30" height="30" class="d-inline-block align-top" alt=""></a>
-	<div class="collapse navbar-collapse" id="navbarNav">
-		<ul class="navbar-nav">
-			<li class="nav-item active">
-				<a class="nav-link" href="/">home<span class="sr-only">(current)</span></a>
-			</li>
-		</ul>
-		<ul class="navbar-nav">
-			<li class="nav-item active">
-				<a class="nav-link" href="/video">video<span class="sr-only">(current)</span></a>
-			</li>
-		</ul>
-		<ul class="navbar-nav">
-			<li class="nav-item active">
-				<a class="nav-link" href="/logout">logout<span class="sr-only">(current)</span></a>
-			</li>
-		</ul>
-	</div>
-</nav>
-<div class="container">
-	<form id="search_form" action="/movie/search" method="POST">
-		<div class="row">
-			<div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
-				<div class="input-group">
-					<input type="text" class="form-control" placeholder="Search" id="search" name="search" autofocus {{#if search}} value="{{search}}" {{/if}} />
-					<div class="input-group-btn">
-						<button class="btn btn-primary" type="submit">
-							<i class="fab fa-search"></i>
-						</button>
+<div style="position: fixed;width:100%;background-color:black; z-index:2">
+	<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<a class="navbar-brand" href="/home"><img src="/images/logo.png" width="30" height="30" class="d-inline-block align-top" alt=""></a>
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav">
+				<li class="nav-item active">
+					<a class="nav-link" href="/">home<span class="sr-only">(current)</span></a>
+				</li>
+			</ul>
+			<ul class="navbar-nav">
+				<li class="nav-item active">
+					<a class="nav-link" href="/video">video<span class="sr-only">(current)</span></a>
+				</li>
+			</ul>
+			<ul class="navbar-nav">
+				<li class="nav-item active">
+					<a class="nav-link" href="/logout">logout<span class="sr-only">(current)</span></a>
+				</li>
+			</ul>
+		</div>
+	</nav>
+	<div class="container">
+		<form id="search_form" action="/movie/search" method="POST">
+			<div class="row">
+				<div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+					<div class="input-group">
+						<input type="text" class="form-control" placeholder="Search" id="search" name="search" autofocus {{#if search}} value="{{search}}" {{/if}} />
+						<div class="input-group-btn">
+							<button class="btn btn-primary" type="submit">
+								<i class="fab fa-search"></i>
+							</button>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</form>
+		</form>
+	</div>
 </div>
 
 <div class="containers">
