--- a/views/register.hbs
+++ b/views/register.hbs
@@ -11,10 +11,10 @@
 					{{/each}}
 				</div>
 			{{/if}}
-			{{#if mail}}
-				<div id="errors" class="alert alert-danger" role="alert">{{mail}}</div>
-			{{else if user}}
-				<div id="errors" class="alert alert-danger" role="alert">{{user}}</div>
+			{{#if mail_err}}
+				<div id="errors" class="alert alert-danger" role="alert">{{mail_err}}</div>
+			{{else if user_err}}
+				<div id="errors" class="alert alert-danger" role="alert">{{user_err`}}</div>
 			{{/if}}
 			<div id="err_msg" style="display:none" class="alert alert-danger" role="alert"> </div>
 			<div class="card card-signin my-5">
