--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,16 +1,17 @@
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+ crossorigin="anonymous">
 <link rel="stylesheet" href="/stylesheets/login.css">
 <link rel="stylesheet" href="/stylesheets/bootstrap-social.css">
 {{#if title}}
-	<title>{{title}}</title>
+<title>{{title}}</title>
 {{/if}}
 <div class="container">
 	<div class="row">
 		<div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
 			{{#if success_msg}}
-				<div id="errors" class="alert alert-success" role="alert">{{success_msg}}</div>
+			<div id="errors" class="alert alert-success" role="alert">{{success_msg}}</div>
 			{{else if error}}
-				<div id="errors" class="alert alert-danger" role="alert">{{error}}</div>
+			<div id="errors" class="alert alert-danger" role="alert">{{error}}</div>
 			{{/if}}
 			<div class="card card-signin my-5">
 				<div class="card-body">
@@ -25,9 +26,10 @@
 							<label for="inputPassword">Password</label>
 						</div>
 
-						<div class="custom-control custom-checkbox mb-3">
-							<input type="checkbox" class="form-check-input" id="customCheck1">
-							<label class="custom-control-label" for="customCheck1">Remember password</label>
+						<div class="checkbox mb-3">
+							<label>
+								<input type="checkbox" value="remember-me"> Remember me
+							</label>
 						</div>
 						<button class="btn btn-lg btn-primary btn-block " type="submit"> <span>login</span> </button>
 						<hr class="my-4">
