--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,8 +1,10 @@
 <!-- Font Awesome -->
+<xmlns="http://www.w3.org/1999/xhtml"></xmlns>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://twitter.github.io/typeahead.js/js/handlebars.js"></script>
 <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
 <link rel="stylesheet" href="/stylesheets/home.css">
+{{!-- <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet"> --}}
 <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
 	<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
@@ -39,7 +41,29 @@
 </div>
 
 <div class="containers">
-
+	<div class="gala">
+	</div>
+</div>
+<div class="movie-desc">
+	<div class="box">
+		<div class="cancel">
+			<img style="width:100%;height:100%" src="/images/cancel.svg" id="cancel">
+		</div>
+	</div>
+	<div class="play" onclick="myFunction()">
+		<img style="width:100%;height:100%" src="/images/play-circle-regular.svg" id="play">
+	</div>
+	<p></p>
+</div>
+<div class="popup" onclick="myFunction()"></div>
+	<div class='player'>
+		<center>
+			<video id="videoPlayer" controls>
+				<source src="http://localhost:8080/video" type="video/mp4">
+				Your browser does not support the video tag.
+			</video>
+		</center>
+	</div>
 </div>
 </script>
 <!--container-->
