--- a/views/video.hbs
+++ b/views/video.hbs
@@ -1,7 +1,8 @@
+<title>yesus</title>
 <link rel="stylesheet" href="/stylesheets/video.css">
 <!-- Font Awesome -->
 <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
-<link rel="stylesheet" href="/stylesheets/home.css">
+<!-- <link rel="stylesheet" href="/stylesheets/home.css"> -->
 <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
 	<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
@@ -16,10 +17,8 @@
 	</div>
 </nav>
 <div class='player'>
-	<center>
-		<video id="videoPlayer" controls>
-			<source src="http://localhost:8080/video" type="video/mp4">
-  			Your browser does not support the video tag.
-		</video>
-	</center>
+	<video id="videoPlayer" controls>
+		<source src="http://localhost:8080/video" type="video/mp4">
+		Your browser does not support the video tag.
+	</video>
 </div>
