--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -1,305 +1,321 @@
 body {
-    background-color: black;
+	background-color: black;
 }
 
 .dslc-content i.fa {
-    font-style: normal;
+	font-style: normal;
+}
+
+.form-control {
+	background-color: #FFC773;
 }
 
 .movie-desc {
-    -webkit-transition: 600ms;
-    transition: 600ms;
-    width: 0;
-    height: 20vw;
-    background: #FFAB2E;
-    position: fixed;
-    top: 100px;
-    padding-bottom: 5vw;
-    right: 0;
-    left: 0;
-    margin: auto;
-    border-radius: 10px;
-    z-index: 2;
-    display: none;
-    /* background: linear-gradient(to bottom left, rgba(255, 255, 255, .8), #FFAB2E); */
-    /* width: 70vw;
-    height: 800px; */
+	-webkit-transition: 600ms;
+	transition: 600ms;
+	width: 0;
+	height: 20vw;
+	background: #FFAB2E;
+	position: fixed;
+	top: 100px;
+	padding-bottom: 5vw;
+	right: 0;
+	left: 0;
+	margin: auto;
+	border-radius: 10px;
+	z-index: 2;
+	display: none;
+	/* background: linear-gradient(to bottom left, rgba(255, 255, 255, .8), #FFAB2E); */
+	/* width: 70vw;
+	height: 800px; */
 }
 
 .row {
-    padding-top: 8px;
+	padding-top: 8px;
 }
 
 .cancel {
-    /* position: absolute; */
-    float: right;
-    margin-right: 1vw;
-    margin-top: 1vw;
-    width: 4vw;
-    height: 4vw;
-    z-index: 2;
-    /* background-color: tomato; */
+	/* position: absolute; */
+	float: right;
+	margin-right: 1vw;
+	margin-top: 1vw;
+	width: 4vw;
+	height: 4vw;
+	z-index: 2;
+	/* background-color: tomato; */
 }
 .cancel:hover {
-    transform: scale(1.2);
+	transform: scale(1.2);
 }
 
 .play {
-    /* position: absolute; */
-    bottom: 0px;
-    margin-left: 60vw;
-    margin-top: 10vw;
-    width: 1vw;
-    height: 1vw;
-    transform: scale(5);
-    background: #FFAB2E;
-    border-radius: 50%;
-    /* z-index: 2; */
-    /* background-color: tomato; */
+	/* position: absolute; */
+	bottom: 0px;
+	margin-left: 60vw;
+	margin-top: 10vw;
+	width: 1vw;
+	height: 1vw;
+	transform: scale(5);
+	background: #FFAB2E;
+	border-radius: 50%;
+	/* z-index: 2; */
+	/* background-color: tomato; */
 }
 .play:hover {
-    transform: scale(5.2);
-    background: white;
-    transition: all .5s;
+	transform: scale(5.2);
+	background: rgb(255, 153, 0);
+	transition: all .5s;
 }
 
 .box {
-    z-index: 1;
-    border-radius: 10px;
-    width: 100%;
-    height: 65%;
-    top: 20px;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    clip-path: polygon(-34% 0%, 101% 0%, 100% 90%);
-    /* filter: blur(8px);
-    -webkit-filter: blur(8px); */
+	z-index: 1;
+	border-radius: 10px;
+	width: 100%;
+	height: 65%;
+	top: 20px;
+	background-size: 100%;
+	background-repeat: no-repeat;
+	clip-path: polygon(-34% 0%, 101% 0%, 100% 90%);
+	/* filter: blur(8px);
+	-webkit-filter: blur(8px); */
 }
 
 .box:hover {
-    clip-path: polygon(-100000px 0%, 101% 0%, 100% 90%);
+	clip-path: polygon(-100000px 0%, 101% 0%, 100% 90%);
 }
 
 body i {
-    font-family: 'FontAwesome' !important;
+	font-family: 'FontAwesome' !important;
 }
 
 .navbar {
-    color: gold;
-    font-weight: bold;
-    background-color: #FF9900;
+	color: gold;
+	font-weight: bold;
+	background-color: #FF9900;
 }
 
 .containers {
-    position: relative;
-    z-index: 0;
+	position: relative;
+	z-index: 0;
 }
 
 .collapse {
-    background-color: #ff9900;
+	background-color: #ff9900;
 }
 
 .input-control {
-    border: 2px solid #ff9900;
+	border: 2px solid #ff9900;
 }
 
 .btn {
-    background-color: black;
-    /* color: #ff9900; */
-    border: 2px solid #ff9900;
+	background-color: black;
+	/* color: #ff9900; */
+	border: 2px solid #ff9900;
 }
 
 .btn:hover {
-    background: rgba(0, 0, 0, 0.507);
-    border: 2px solid #ff9900;
+	background: rgba(0, 0, 0, 0.507);
+	border: 2px solid #ff9900;
 }
 
 * {
-    -webkit-transition: 300ms;
-    transition: 300ms;
+	-webkit-transition: 300ms;
+	transition: 300ms;
 }
 
 .intro {
-    text-align: center;
+	text-align: center;
 }
 
 ul {
-    list-style-type: none;
+	list-style-type: none;
 }
 
 h1, h2, h3, h4, h5, p {
-    font-weight: 400;
+	font-weight: 400;
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+	text-decoration: none;
+	color: inherit;
 }
 
 a:hover {
-    color: #6ABCEA;
+	color: #6ABCEA;
 }
 
 .gala {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    max-width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    padding-top: 100px;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-ms-flex-wrap: wrap;
+	flex-wrap: wrap;
+	max-width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+	padding-top: 100px;
 }
 
 .movie-card {
-    background: #FF9900;
-    box-shadow: 0px 6px 18px rgba(0, 0, 0, 0.1);
-    width: 100%;
-    max-width: 315px;
-    margin: 2em;
-    border-radius: 10px;
-    display: inline-block;
+	background: #FF9900;
+	box-shadow: 0px 6px 18px rgba(0, 0, 0, 0.1);
+	width: 100%;
+	max-width: 315px;
+	margin: 2em;
+	border-radius: 10px;
+	display: inline-block;
 }
 
 .movie-header {
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    border: 1px solid #FF9900;
-    padding: 0;
-    margin: 0;
-    height: 450px;
-    width: 100%;
-    display: block;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+	border: 1px solid #FF9900;
+	padding: 0;
+	margin: 0;
+	height: 450px;
+	width: 100%;
+	display: block;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
 }
 
 .header-icon-container {
-    position: relative;
+	position: relative;
 }
 
 .player {
-    width: 100%;
-    height: 900px;
+	width: 100%;
+	height: 900;
+	display: none;
+	z-index: 3;
+	top: 115px;
+	position: fixed;
 }
 
 #videoPlayer {
-    width: 900px;
-    height: 600px;
-    align-content: center;
-    text-align: center;
-    border: 5px solid #FF9900;
+	width: 60%;
+	height: auto;
+	z-index: 3;
+	align-content: center;
+	text-align: center;
+	border: 2px solid #FF9900;
 }
 
 .header-icon {
-    width: 100%;
-    height: 367px;
-    line-height: 367px;
-    text-align: center;
-    vertical-align: middle;
-    margin: 0 auto;
-    color: #ffffff;
-    font-size: 54px;
-    text-shadow: 0px 0px 20px #6abcea, 0px 5px 20px #6ABCEA;
-    opacity: .85;
+	width: 100%;
+	height: 367px;
+	line-height: 367px;
+	text-align: center;
+	vertical-align: middle;
+	margin: 0 auto;
+	color: #ffffff;
+	font-size: 54px;
+	text-shadow: 0px 0px 20px #6abcea, 0px 5px 20px #6ABCEA;
+	opacity: .85;
 }
 
 .header-icon:hover {
-    background: rgba(0, 0, 0, 0.15);
-    font-size: 74px;
-    text-shadow: 0px 0px 20px #6abcea, 0px 5px 30px #6ABCEA;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    opacity: 1;
+	background: rgba(0, 0, 0, 0.15);
+	font-size: 74px;
+	text-shadow: 0px 0px 20px #6abcea, 0px 5px 30px #6ABCEA;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	opacity: 1;
 }
 
 .movie-card:hover {
-    -webkit-transform: scale(1.03);
-    transform: scale(1.03);
-    box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.08);
+	-webkit-transform: scale(1.03);
+	transform: scale(1.03);
+	box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.08);
 }
 
 .movie-content {
-    padding: 18px 18px 24px 18px;
-    margin: 0;
+	padding: 18px 18px 24px 18px;
+	margin: 0;
 }
 
 .container {
-    z-index: 0;
-    color: rgba(0, 0, 0, 0.507);
+	z-index: 0;
+	color: rgba(0, 0, 0, 0.507);
 }
 
 .movie-content-header, .movie-info {
-    display: table;
-    width: 100%;
+	display: table;
+	width: 100%;
 }
 
 .movie-title {
-    font-size: 24px;
-    margin: 0;
-    display: table-cell;
+	font-size: 24px;
+	margin: 0;
+	display: table-cell;
 }
 
 .imax-logo {
-    width: 50px;
-    height: 15px;
-    background-color: #FF9900;
-    background: url("https://mbtskoudsalg.com/images/high-definition-logo-png-4.png") no-repeat;
-    background-size: contain;
-    display: table-cell;
-    float: right;
-    position: relative;
-    margin-top: 5px;
+	width: 50px;
+	height: 15px;
+	background-color: #FF9900;
+	background: url("https://mbtskoudsalg.com/images/high-definition-logo-png-4.png") no-repeat;
+	background-size: contain;
+	display: table-cell;
+	float: right;
+	position: relative;
+	margin-top: 5px;
 }
 
 .movie-info {
-    margin-top: 1em;
+	margin-top: 1em;
 }
 
 .info-section {
-    display: table-cell;
-    text-transform: uppercase;
-    text-align: center;
+	display: table-cell;
+	text-transform: uppercase;
+	text-align: center;
 }
 
 .info-section:first-of-type {
-    text-align: left;
+	text-align: left;
 }
 
 .info-section:last-of-type {
-    text-align: right;
+	text-align: right;
 }
 
 .info-section label {
-    display: block;
-    color: rgba(0, 0, 0, 0.5);
-    margin-bottom: .5em;
-    font-size: 9px;
+	display: block;
+	color: rgba(0, 0, 0, 0.5);
+	margin-bottom: .5em;
+	font-size: 9px;
 }
 
 .info-section span {
-    font-weight: 700;
-    font-size: 11px;
+	font-weight: 700;
+	font-size: 11px;
 }
 
+@media screen and (max-width: 1024px) {
+	#videoplayer {
+		width: 100%;
+		height: auto;
+	}
+ }
+
 @media screen and (max-width: 500px) {
-    .movie-desc {
-        width: 100%;
-    }
+	.movie-desc {
+		width: 100%;
+	}
 
-    .movie-card {
-        width: 95%;
-        max-width: 95%;
-        margin: 1em;
-        display: block;
-    }
+	.movie-card {
+		width: 95%;
+		max-width: 95%;
+		margin: 1em;
+		display: block;
+	}
 
-    .container {
-        padding: 0;
-        margin: 0;
-    }
+	.container {
+		padding: 0;
+		margin: 0;
+	}
 }
