--- a/views/video.hbs
+++ b/views/video.hbs
@@ -4,10 +4,12 @@
 <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
 <!-- <link rel="stylesheet" href="/stylesheets/home.css"> -->
 <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-	<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+	<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav"
+	 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	</button>
-	<a class="navbar-brand" href="#"><img src="/images/logo.png" width="30" height="30" class="d-inline-block align-top" alt=""></a>
+	<a class="navbar-brand" href="#"><img src="/images/logo.png" width="30" height="30" class="d-inline-block align-top"
+		 alt=""></a>
 	<div class="collapse navbar-collapse" id="navbarNav">
 		<ul class="navbar-nav">
 			<li class="nav-item active">
@@ -28,7 +30,19 @@
 	<br>
 	<div class="vid_desc">
 		<h2>Title</h2>
-		<p>What is Lorem Ipsum?
-Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+		<p></p>
 	</div>
 </div>
+
+<script>
+	$('document').ready(function () {
+		var encodedUrl = document.location.search;
+
+		var decodedUrl = Base64.decode(encodedUrl);
+		var query = getQueryParams(decodedUrl);
+		$('.vid_desc').find('h2').html(query.title);
+		$('.vid_desc').find('p').html(query.desc);
+		console.log(query);
+	})
+
+</script>
