--- a/public/stylesheets/video.css
+++ b/public/stylesheets/video.css
@@ -1,7 +1,6 @@
 /* * {
     transition: 0s;
 } */
-
 body {
     background-color: black;
 }
@@ -30,20 +29,23 @@ body {
 
 #videoPlayer {
     position: relative;
-    align-self: center;
     top: 2vw;
-    bottom: 0;
-    left: 2vw;
-    right: 0;
-    text-align: center;
-    margin: auto;
+    display: table;
     width: 60%;
-    /* height: auto; */
-    border: 2px solid #FF9900;
+    height: 100%;
+    border: 2px solid #ff9900;
+    margin: 0 auto;
 }
 
 .player {
-    top: 2vw;
+    position: relative;
+    width: 100%;
+    height: 48.7%;
+}
+
+video>.vjs-big-play-button {
+    background-color: aqua;
+    border: 0.067em solid #ff9900;
 }
 
 .vid_desc {
@@ -56,11 +58,11 @@ body {
     align-self: center;
     /* text-align: center; */
     width: 61%;
-    margin: auto;}
+    margin: auto;
+}
 
 @media screen and (max-width: 624px) {
     #videoplayer {
         width: 100%;
-        height: auto;
     }
 }
